force-app/main/default/objects/SCRUM_PS__c/SCRUM_PS__c.object-meta.xml
<CustomObject>
    <description>Datasource object for SCRUM reporting.</description>
    <label>SCRUM PS</label>
    <nameField>
        <displayFormat>PSS{0000}</displayFormat>
        <label>SCRUM PS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCRUM PS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>