force-app/main/default/objects/SCRUM_PS__c/fields/Amount_Text__c.field-meta.xml
<CustomField>
    <fullName>Amount_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amount Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>