force-app/main/default/objects/SCRUM_PS__c/fields/AmountSort__c.field-meta.xml
<CustomField>
    <fullName>AmountSort__c</fullName>
    <label>AmountSort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>