force-app/main/default/objects/SCRUM_PS__c/fields/FY01__c.field-meta.xml
<CustomField>
    <fullName>FY01__c</fullName>
    <label>FY01</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>