force-app/main/default/objects/SCRUM_PS__c/fields/FY02__c.field-meta.xml
<CustomField>
    <fullName>FY02__c</fullName>
    <label>FY02</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>