force-app/main/default/objects/SCRUM_PS__c/fields/FY03__c.field-meta.xml
<CustomField>
    <fullName>FY03__c</fullName>
    <label>FY03</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>