force-app/main/default/objects/SCRUM_PS__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Added post object creation by sharris 11/05/2012</description>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>