force-app/main/default/objects/SCRUM_PS__c/fields/Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>